--- a/index.html
+++ b/index.html
@@ -1,199 +1,297 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MalukuInfraZone</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>MalukuInfraZone - Hybrid</title>
 
-  <!-- Tailwind untuk styling (cukup untuk demo, produksi sebaiknya build PostCSS) -->
+  <!-- Google font (kosongkan jika tidak perlu) -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Tailwind CDN OK untuk demo. Untuk produksi build Tailwind ke file CSS. -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
-
-  <!-- Favicon kosong agar tidak error 404 -->
-  <link rel="icon" href="data:," />
-
   <style>
-    :root {
-      --font-poppins: 'Poppins', sans-serif;
-      --font-montserrat: 'Montserrat', sans-serif;
-    }
-    body {
-      font-family: var(--font-poppins);
-      background: linear-gradient(135deg,#111,#1f1f2e,#2b2b2b,#000);
-      background-attachment: fixed;
-      overflow-x: hidden;
-      color: #fff;
-    }
-    .bg-geometry {
-      position: absolute; top: 0; left: 0;
-      width: 100%; height: 100%;
-      overflow: hidden; z-index: -1;
-    }
-    .triangle, .diamond, .hexagon, .line-shape {
-      position: absolute;
-      border: 2px solid rgba(255,255,255,0.07);
-      animation: rotate 50s linear infinite;
-    }
-    .triangle {
-      width: 0; height: 0;
-      border-left: 140px solid transparent;
-      border-right: 140px solid transparent;
-      border-bottom: 240px solid rgba(255,255,255,0.07);
-    }
-    .diamond {
-      width: 180px; height: 180px;
-      border: 2px solid rgba(59,130,246,0.15);
-      transform: rotate(45deg);
-    }
-    .hexagon {
-      width: 200px; height: 200px;
-      clip-path: polygon(50% 0,93% 25%,93% 75%,50% 100%,7% 75%,7% 25%);
-      border-color: rgba(59,130,246,0.15);
-    }
-    .line-shape {
-      width: 400px; height: 2px;
-      background: rgba(59,130,246,0.05);
-      animation: slide 30s linear infinite;
-    }
-    .triangle:nth-child(1){ top:10%; left:-100px; }
-    .diamond:nth-child(2){ top:40%; right:-120px; animation-duration:70s; }
-    .hexagon:nth-child(3){ bottom:-100px; left:25%; animation-duration:90s; }
-    .line-shape:nth-child(4){ top:70%; left:-200px; animation-duration:40s; }
-
-    @keyframes rotate { from{transform:rotate(0);} to{transform:rotate(360deg);} }
-    @keyframes slide { from{transform:translateX(0);} to{transform:translateX(100vw);} }
-
-    .highlight-bpbpk {
-      font-family: var(--font-montserrat);
-      font-weight: 700; text-transform: uppercase;
-      letter-spacing: 0.2em; color: #60a5fa;
-      transition: all .3s ease;
-    }
-    .highlight-bpbpk:hover {
-      color: #3b82f6; text-shadow: 0 0 10px rgba(59,130,246,0.6);
-    }
-
-    #map { width: 100%; height: 600px; border-radius: 8px; }
+    body { font-family: Poppins, system-ui, sans-serif; background: linear-gradient(135deg,#0b1220,#12121a); color: #fff; margin:0; }
+    #map { width:100%; height:72vh; min-height:420px; border-radius:10px; box-shadow:0 8px 30px rgba(0,0,0,0.45); }
+    .controls { position:fixed; right:18px; bottom:18px; z-index:1200; display:flex; flex-direction:column; gap:8px; }
+    .ctrl-btn { background:#2563eb; color:#fff; padding:10px; border-radius:10px; cursor:pointer; box-shadow:0 6px 18px rgba(0,0,0,0.35); }
+    .panel { position:fixed; right:18px; bottom:80px; z-index:1200; background:rgba(15,23,42,0.95); padding:12px; border-radius:10px; width:280px; box-shadow:0 8px 30px rgba(0,0,0,0.4); }
+    .panel select, .panel button { width:100%; margin-top:6px; padding:8px; border-radius:8px; border:1px solid rgba(255,255,255,0.08); background:transparent; color:#fff; }
+    .info { font-size:13px; color:#9ca3af; margin-top:8px; }
+    #errorMessage { position:fixed; left:50%; transform:translateX(-50%); top:12px; background:rgba(185,28,28,0.12); color:#fecaca; padding:10px 14px; border-radius:8px; display:none; z-index:1300; }
+    .loading { position:fixed; left:50%; top:50%; transform:translate(-50%,-50%); background:rgba(0,0,0,0.6); padding:10px 14px; border-radius:8px; display:none; z-index:1300; }
   </style>
 </head>
-<body class="text-white relative min-h-screen font-poppins">
+<body>
 
-  <!-- Background animasi -->
-  <div class="bg-geometry">
-    <div class="triangle" data-speed="2"></div>
-    <div class="diamond" data-speed="4"></div>
-    <div class="hexagon" data-speed="3"></div>
-    <div class="line-shape" data-speed="1"></div>
+<div id="errorMessage"></div>
+<div id="loading" class="loading">Memuat peta dan data...</div>
+
+<header class="px-6 py-4 flex items-center justify-between">
+  <div class="flex items-center gap-3">
+    <img src="https://cdn-icons-png.flaticon.com/512/854/854878.png" alt="logo" class="w-9 h-9">
+    <h1 class="text-2xl font-semibold">Maluku InfraZone</h1>
   </div>
+  <div class="text-sm text-gray-300">BPBPK Maluku</div>
+</header>
 
-  <!-- Navbar -->
-  <header class="flex justify-between items-center px-8 py-4 relative z-10">
-    <div class="flex items-center space-x-3">
-      <img src="https://cdn-icons-png.flaticon.com/512/854/854878.png" alt="Map Icon" class="w-8 h-8">
-      <h1 class="text-2xl font-extrabold">Maluku<span class="text-yellow-500">InfraZone</span></h1>
-    </div>
-    <div class="highlight-bpbpk">BPBPK Maluku</div>
-  </header>
-
-  <!-- Hero -->
-  <section class="flex flex-col items-center text-center mt-20 px-6 relative z-10">
-    <h2 class="text-5xl font-extrabold leading-tight">Layanan Balai <span class="text-yellow-500">Terpadu</span></h2>
-    <p class="text-gray-300 max-w-2xl mt-4 font-light">Platform digital untuk mempermudah akses informasi dan layanan infrastruktur.</p>
-    <div class="mt-8">
-      <a href="#peta" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold px-8 py-3 rounded-full shadow-lg transition transform hover:scale-105">
-        Peta Infrastruktur
-      </a>
-    </div>
-  </section>
-
-  <!-- Peta -->
-  <section id="peta" class="mt-20 px-6 relative z-10">
-    <h3 class="text-3xl font-bold mb-4">Peta Infrastruktur</h3>
+<main class="px-6 pb-8">
+  <section class="max-w-6xl mx-auto">
+    <h2 class="text-2xl font-bold mb-3">Peta Infrastruktur</h2>
     <div id="map"></div>
   </section>
+</main>
 
-  <!-- Footer -->
-  <footer class="absolute bottom-4 right-4 z-10">
-    <img src="https://cdn-icons-png.flaticon.com/512/921/921490.png" alt="Engineer Icon" class="w-16 h-16">
-  </footer>
+<div class="controls">
+  <button id="togglePanel" class="ctrl-btn" aria-pressed="false" title="Filter">Filter</button>
+</div>
 
-  <!-- Script background animasi -->
-  <script>
-    document.addEventListener("mousemove", function(e){
-      document.querySelectorAll(".bg-geometry > div").forEach(el => {
-        const speed = Number(el.getAttribute("data-speed")) || 1;
-        const x = (window.innerWidth - e.pageX * speed) / 100;
-        const y = (window.innerHeight - e.pageY * speed) / 100;
-        el.style.transform = `translateX(${x}px) translateY(${y}px)`;
-      });
+<div id="panel" class="panel" style="display:none;">
+  <label class="block text-sm text-gray-300">Sektor</label>
+  <select id="sectorFilter"><option value="">Semua Sektor</option></select>
+
+  <label class="block text-sm text-gray-300 mt-2">Tahun</label>
+  <select id="yearFilter"><option value="">Semua Tahun</option></select>
+
+  <button id="applyBtn" style="margin-top:10px;">Terapkan</button>
+  <button id="resetBtn" style="margin-top:8px;background:#374151;">Reset</button>
+
+  <div id="filterInfo" class="info">Menampilkan 0 titik</div>
+</div>
+
+<footer class="fixed bottom-6 left-6 text-sm text-gray-400">Petunjuk singkat: ganti key dan path GeoJSON lalu tes</footer>
+
+<!-- ESM imports. MarkerClusterer ESM + js-api-loader ESM -->
+<script type="module">
+  import { Loader } from 'https://cdn.jsdelivr.net/npm/@googlemaps/js-api-loader@1.16.5/dist/index.esm.min.js';
+  import { MarkerClusterer } from 'https://unpkg.com/@googlemaps/markerclusterer@2.0.10/dist/index.esm.js';
+
+  // Config: ubah ini
+  const API_KEY = 'AIzaSyBEZqcze-RGCcRGIBjyEt0-ID99TCDJeS0';
+  const GEOJSON_PATHS = [
+    'DATA_SPASIAL.geojson',
+    './DATA_SPASIAL.geojson',
+    window.location.origin + '/DATA_SPASIAL.geojson'
+  ];
+
+  // State
+  let map, infoWindow;
+  let allItems = []; // { marker, props }
+  let clusterer = null;
+
+  // UI
+  const elError = document.getElementById('errorMessage');
+  const elLoading = document.getElementById('loading');
+  const elPanel = document.getElementById('panel');
+  const togglePanelBtn = document.getElementById('togglePanel');
+  const sectorSel = document.getElementById('sectorFilter');
+  const yearSel = document.getElementById('yearFilter');
+  const filterInfo = document.getElementById('filterInfo');
+
+  function showError(msg){
+    elError.textContent = msg;
+    elError.style.display = 'block';
+    console.error(msg);
+  }
+  function hideError(){ elError.style.display = 'none'; }
+  function showLoading(){ elLoading.style.display = 'block'; }
+  function hideLoading(){ elLoading.style.display = 'none'; }
+
+  function escapeHtml(s){ return String(s||'').replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
+
+  function normalizeProperties(props){
+    const out = {};
+    Object.keys(props||{}).forEach(k=>{
+      const lower = k.trim().toLowerCase().replace(/\s+/g,'_');
+      out[k] = props[k];
+      if(['sektor','sector'].includes(lower)) out.Sektor = props[k];
+      if(['tahun_pembangunan','tahun','year'].includes(lower)) out.Tahun_Pembangunan = props[k];
+      if(['nama_infrastruktur','nama','name'].includes(lower)) out.Nama_Infrastruktur = props[k];
+      if(['status_keberfungsian','status'].includes(lower)) out.Status_Keberfungsian = props[k];
     });
-  </script>
+    return out;
+  }
 
-  <!-- Script Google Maps -->
-  <script>
-    function escapeHtml(s){ return String(s||'').replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
+  function buildInfoHtml(p){
+    if(!p || Object.keys(p).length===0) return '(tidak ada atribut)';
+    const title = p.Nama_Infrastruktur || p.nama || p.Name || p['Nama Infrastruktur'] || '';
+    const lines = [];
+    if(title) lines.push(`<b>${escapeHtml(title)}</b>`);
+    if(p.Sektor) lines.push(`Sektor: ${escapeHtml(p.Sektor)}`);
+    if(p.Tahun_Pembangunan) lines.push(`Tahun: ${escapeHtml(p.Tahun_Pembangunan)}`);
+    if(p.Status_Keberfungsian) lines.push(`Status: ${escapeHtml(p.Status_Keberfungsian)}`);
+    if(p.Keterangan) lines.push(`<div style="margin-top:6px">${escapeHtml(p.Keterangan)}</div>`);
+    return `<div style="max-width:280px;font-size:13px">${lines.join('<br>')}</div>`;
+  }
 
-    let map, infoWindow;
+  // Create simple SVG circle icon. Small, efficient.
+  function svgIcon(color='#ef4444', size=18, stroke='#fff'){
+    const r = Math.round(size/2.6);
+    const s = `
+      <svg xmlns="http://www.w3.org/2000/svg" width="${size}" height="${size}" viewBox="0 0 ${size} ${size}">
+        <circle cx="${size/2}" cy="${size/2}" r="${r}" fill="${color}" stroke="${stroke}" stroke-width="2" />
+      </svg>`;
+    return { url: 'data:image/svg+xml;utf8,' + encodeURIComponent(s), scaledSize: new google.maps.Size(size, size) };
+  }
 
-    function buildInfoHtml(props){
-      if(!props || Object.keys(props).length === 0) return '(tidak ada atribut)';
-      const title = props.Nama_Infrastruktur || props.nama || props.Name || props.name || props['Nama Infrastruktur'];
-      if(title){
-        const lines = [`<b>${escapeHtml(title)}</b>`];
-        if(props.Sektor) lines.push('Sektor: ' + escapeHtml(props.Sektor));
-        if(props.Tahun_Pembangunan) lines.push('Tahun: ' + escapeHtml(props.Tahun_Pembangunan));
-        if(props.Status_Keberfungsian) lines.push('Status: ' + escapeHtml(props.Status_Keberfungsian));
-        if(props.Keterangan) lines.push('<div style="margin-top:6px">' + escapeHtml(props.Keterangan) + '</div>');
-        return lines.join('<br>');
-      }
-      let html = '<div style="max-width:300px;font-size:13px">';
-      Object.keys(props).forEach(k => {
-        html += '<div><strong>' + escapeHtml(k) + ':</strong> ' + escapeHtml(props[k]) + '</div>';
+  // Create markers and cluster
+  function createMarkersFromGeo(geo){
+    clearMarkers();
+    const markers = [];
+    const bounds = new google.maps.LatLngBounds();
+    geo.features.forEach(f=>{
+      if(!f.geometry) return;
+      if(f.geometry.type !== 'Point') return;
+      const coords = f.geometry.coordinates;
+      if(!Array.isArray(coords) || coords.length < 2) return;
+      const lng = Number(coords[0]), lat = Number(coords[1]);
+      if(!isFinite(lat) || !isFinite(lng)) return;
+      const props = normalizeProperties(f.properties || {});
+      const marker = new google.maps.Marker({
+        position: { lat, lng },
+        title: props.Nama_Infrastruktur || '',
+        icon: svgIcon('#ef4444', 18, '#fff'),
+        optimized: true
       });
-      html += '</div>';
-      return html;
-    }
-
-    function initMap(){
-      map = new google.maps.Map(document.getElementById("map"), {
-        center: { lat: -3.7, lng: 128.2 },
-        zoom: 7,
-        streetViewControl: false,
+      marker.addListener('click', ()=>{
+        infoWindow.setContent(buildInfoHtml(props));
+        infoWindow.open(map, marker);
       });
-      infoWindow = new google.maps.InfoWindow();
-      loadGeoJSON('DATA_SPASIAL.geojson');
+      markers.push({ marker, props });
+      bounds.extend({ lat, lng });
+    });
+
+    allItems = markers;
+    // Build clusterer
+    const markerObjs = allItems.map(i => i.marker);
+    if(clusterer) clusterer.clearMarkers();
+    clusterer = new MarkerClusterer({ markers: markerObjs, map });
+    // fit
+    if(!bounds.isEmpty()) map.fitBounds(bounds);
+    updateFilterInfo(allItems.length);
+  }
+
+  function clearMarkers(){
+    if(clusterer) try{ clusterer.clearMarkers(); }catch(e){ console.warn(e); }
+    allItems.forEach(i => i.marker.setMap(null));
+    allItems = [];
+  }
+
+  function applyFilter(){
+    hideError();
+    const sector = sectorSel.value;
+    const year = yearSel.value;
+    if(allItems.length === 0){ updateFilterInfo(0); return; }
+
+    // show/hide markers
+    const vis = [];
+    allItems.forEach(({marker, props})=>{
+      const matchesSector = !sector || (props.Sektor && String(props.Sektor).trim() === sector);
+      const matchesYear = !year || (props.Tahun_Pembangunan && String(props.Tahun_Pembangunan).trim() === year);
+      if(matchesSector && matchesYear){ marker.setMap(map); vis.push(marker); } else { marker.setMap(null); }
+    });
+
+    if(clusterer) clusterer.clearMarkers();
+    clusterer = new MarkerClusterer({ markers: vis, map });
+    updateFilterInfo(vis.length);
+    if(vis.length > 0){
+      const b = new google.maps.LatLngBounds();
+      vis.forEach(m => b.extend(m.getPosition()));
+      map.fitBounds(b);
+    }
+  }
+
+  function resetFilter(){
+    sectorSel.value = '';
+    yearSel.value = '';
+    allItems.forEach(i => i.marker.setMap(map));
+    if(clusterer) clusterer.clearMarkers();
+    clusterer = new MarkerClusterer({ markers: allItems.map(i=>i.marker), map });
+    updateFilterInfo(allItems.length);
+    const b = new google.maps.LatLngBounds();
+    allItems.forEach(i => b.extend(i.marker.getPosition()));
+    if(!b.isEmpty()) map.fitBounds(b);
+  }
+
+  function updateFilterInfo(count){
+    filterInfo.textContent = 'Menampilkan ' + count + ' titik';
+  }
+
+  // Populate filter selects
+  function populateFilters(geo){
+    const sectors = new Set();
+    const years = new Set();
+    geo.features.forEach(f=>{
+      const p = normalizeProperties(f.properties || {});
+      if(p.Sektor && String(p.Sektor).trim()) sectors.add(String(p.Sektor).trim());
+      if(p.Tahun_Pembangunan && String(p.Tahun_Pembangunan).trim() && !isNaN(String(p.Tahun_Pembangunan).trim())) years.add(String(p.Tahun_Pembangunan).trim());
+    });
+    // build options
+    sectorSel.innerHTML = '<option value="">Semua Sektor</option>' + Array.from(sectors).sort().map(s=>`<option value="${escapeHtml(s)}">${escapeHtml(s)}</option>`).join('');
+    yearSel.innerHTML = '<option value="">Semua Tahun</option>' + Array.from(years).sort((a,b)=>Number(a)-Number(b)).map(y=>`<option value="${escapeHtml(y)}">${escapeHtml(y)}</option>`).join('');
+  }
+
+  // try multiple candidate paths to avoid GitHub Pages path issues
+  async function tryFetch(paths){
+    for(const p of paths){
+      try{
+        const r = await fetch(p);
+        if(r.ok) return await r.json();
+        console.warn('fetch', p, 'status', r.status);
+      }catch(e){ console.warn('fetch error', p, e); }
+    }
+    throw new Error('GeoJSON tidak ditemukan. Periksa lokasi file.');
+  }
+
+  async function loadGeoJSON(){
+    showLoading(); hideError();
+    try{
+      const geo = await tryFetch(GEOJSON_PATHS);
+      populateFilters(geo);
+      createMarkersFromGeo(geo);
+    }catch(err){
+      showError(err.message);
+      console.error(err);
+    }finally{ hideLoading(); }
+  }
+
+  // Init maps using Loader
+  async function init(){
+    showLoading();
+    const loader = new Loader({ apiKey: API_KEY, version: 'weekly' });
+    try{
+      await loader.load();
+    }catch(e){
+      hideLoading();
+      showError('Gagal memuat Google Maps API. Periksa API key.');
+      console.error(e);
+      return;
     }
 
-    function loadGeoJSON(url){
-      fetch(url)
-        .then(r => r.json())
-        .then(geo => {
-          const bounds = new google.maps.LatLngBounds();
-          geo.features.forEach(f => {
-            if(!f.geometry) return;
-            const [lng, lat] = f.geometry.coordinates;
-            if(!isFinite(lat) || !isFinite(lng)) return;
-            const props = f.properties || {};
-            const marker = new google.maps.Marker({
-              position: { lat, lng },
-              map: map,
-              title: props.Nama_Infrastruktur || props.nama || props.Name || ''
-            });
-            marker.addListener('click', () => {
-              infoWindow.setContent(buildInfoHtml(props));
-              infoWindow.open(map, marker);
-            });
-            bounds.extend({ lat, lng });
-          });
-          if(!bounds.isEmpty()) map.fitBounds(bounds);
-        })
-        .catch(err => console.error('Gagal memuat GeoJSON:', err));
-    }
-  </script>
+    map = new google.maps.Map(document.getElementById('map'), {
+      center: { lat:-3.3, lng:129.1 },
+      zoom: 7,
+      mapTypeControl: false,
+      streetViewControl: false,
+    });
+    infoWindow = new google.maps.InfoWindow();
 
-  <!-- Load Google Maps API -->
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBEZqcze-RGCcRGIBjyEt0-ID99TCDJeS0&callback=initMap"></script>
+    // Wire UI handlers
+    document.getElementById('applyBtn').addEventListener('click', applyFilter);
+    document.getElementById('resetBtn').addEventListener('click', resetFilter);
+    togglePanelBtn.addEventListener('click', ()=>{ const s = elPanel.style.display === 'none' ? 'block' : 'none'; elPanel.style.display = s; togglePanelBtn.setAttribute('aria-pressed', s==='block'); });
+
+    // Load data
+    await loadGeoJSON();
+  }
+
+  // Kickoff
+  init();
+
+  // Expose for debugging
+  window._mfn = { createMarkersFromGeo, loadGeoJSON, clustererRef: () => clusterer };
+</script>
+
 </body>
 </html>
