--- a/index.html
+++ b/index.html
@@ -19,78 +19,76 @@
   --radius:10px;
   --ff-sans:"Poppins",system-ui,Arial;
 }
+
+/* base */
 html,body{height:100%;margin:0;font-family:var(--ff-sans);background:var(--bg);color:var(--text-light);padding-top:72px}
 a{color:inherit;text-decoration:none}
 
-/* HEADER */
-header{
-  position:fixed;top:0;left:0;right:0;z-index:60;
-  display:flex;align-items:center;justify-content:space-between;
-  padding:12px 20px;background:var(--glass);backdrop-filter:blur(6px);
-  border-bottom:1px solid rgba(255,255,255,0.03)
-}
+/* header */
+header{position:fixed;top:0;left:0;right:0;z-index:60;display:flex;align-items:center;justify-content:space-between;padding:12px 20px;background:var(--glass);backdrop-filter:blur(6px);border-bottom:1px solid rgba(255,255,255,0.03)}
 .brand{display:flex;align-items:center;gap:12px}
 .brand img{height:40px}
 .site-title{font-family:'Montserrat';font-weight:800;font-size:20px}
 nav{display:flex;align-items:center;gap:12px}
 nav a{padding:8px 12px;border-radius:8px;color:var(--text-light);font-weight:600}
-nav a.active{background:linear-gradient(90deg,#0b3656,#0b2f52);color:var(--accent);box-shadow:0 6px 18px rgba(0,0,0,0.45)}
+nav a.active{background:var(--accent);color:#071016;font-weight:800;box-shadow:0 6px 18px rgba(0,0,0,0.45)}
 
-/* HERO */
-.hero{
-  height:62vh;
-  background-image:url('images/background-maluku.jpg');
-  background-size:cover;
-  background-position:center;
-  display:flex;align-items:center;justify-content:center;position:relative;
-}
+/* solid CTA Peta */
+.btn-secondary, nav a.btn-secondary { background: var(--accent); color:#071016 !important; padding:10px 14px; border-radius:8px; font-weight:700; }
+
+/* hero */
+.hero{height:62vh;background-image:url('images/background-maluku.jpg');background-size:cover;background-position:center;display:flex;align-items:center;justify-content:center;position:relative}
 .hero::after{content:'';position:absolute;inset:0;background:linear-gradient(180deg,rgba(0,0,0,0.52),rgba(0,0,0,0.78));}
 .hero-inner{position:relative;z-index:10;text-align:center;padding:20px;max-width:960px}
-.hero h1{font-family:'Montserrat';font-weight:900;font-size:44px;margin:0}
-.hero p{color:var(--muted);margin-top:10px;font-size:16px}
+.hero h1{font-family:'Montserrat';font-weight:900;font-size:44px;margin:0;text-align:center}
+.hero p{color:var(--muted);margin-top:10px;font-size:16px;text-align:center}
 .hero .cta-row{margin-top:18px;display:flex;gap:12px;justify-content:center}
 .btn-primary{background:var(--accent);color:#071016;padding:12px 18px;border-radius:999px;font-weight:800}
-.btn-secondary{background:transparent;border:1px solid rgba(255,255,255,0.08);color:var(--text-light);padding:10px 16px;border-radius:8px}
+.btn-secondary{background:var(--accent);color:#071016;padding:10px 14px;border-radius:8px;font-weight:700}
 
-/* SECTORS */
+/* sectors */
 .section{padding:54px 18px;max-width:1200px;margin:0 auto}
 .sector-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:14px}
 .sector-card{background:rgba(255,255,255,0.02);padding:16px;border-radius:10px;text-align:center}
 .sector-card img{width:48px;height:48px;object-fit:contain}
-.sector-card h3{color:var(--accent);margin:8px 0 4px;font-size:15px;font-weight:700}
-.sector-card p{color:var(--muted);font-size:13px;margin:0}
+.sector-card h3{color:var(--accent);margin:8px 0 4px;font-size:15px;font-weight:700;text-align:center}
+.sector-card p{color:var(--muted);font-size:13px;margin:0;text-align:center}
 
-/* DASHBOARD (dark translucent) */
+/* dashboard */
 .dashboard{background:linear-gradient(180deg,rgba(6,10,14,0.65),rgba(6,10,14,0.45));padding:36px 18px;border-top:2px solid rgba(255,255,255,0.03)}
 .container{max-width:1200px;margin:0 auto;display:flex;flex-direction:column;align-items:center}
 
 /* recap header */
-.recap-header{width:100%;max-width:1120px;background:rgba(255,255,255,0.02);padding:12px 14px;border-radius:8px;border-left:4px solid rgba(255,255,255,0.03);margin-bottom:12px}
-.recap-header h2{margin:0;font-family:'Montserrat';font-weight:900;font-size:20px;color:var(--text-light)}
-.recap-header p{margin:6px 0 0;color:var(--muted);font-size:13px}
+.recap-header{width:100%;max-width:1120px;background:rgba(255,255,255,0.02);padding:12px 14px;border-radius:8px;border-left:4px solid rgba(255,255,255,0.03);margin-bottom:12px;text-align:center}
+.recap-header h2{margin:0;font-family:'Montserrat';font-weight:900;font-size:20px;color:var(--text-light);text-align:center}
+.recap-header p{margin:6px 0 0;color:var(--muted);font-size:13px;text-align:center}
 
-/* cards center layout */
-.cards-grid,.cards-bottom{display:flex;flex-wrap:wrap;justify-content:center;gap:14px;width:100%}
-.card{width:var(--card-w);background:rgba(255,255,255,0.03);border-radius:10px;border:1px solid rgba(255,255,255,0.05);overflow:hidden;box-shadow:0 8px 24px rgba(0,0,0,0.6);backdrop-filter:blur(4px)}
+/* rows: top 3, bottom 2 */
+.cards-row { display:flex; justify-content:center; gap:14px; width:100%; flex-wrap:wrap; margin-bottom:12px; }
+.card { width: var(--card-w); background:rgba(255,255,255,0.03); border-radius:10px; border:1px solid rgba(255,255,255,0.05); overflow:hidden; box-shadow:0 8px 24px rgba(0,0,0,0.6); backdrop-filter:blur(4px); }
 
-/* card head: two lines */
+/* card head */
 .card-head{background:linear-gradient(180deg,var(--navy),#0b3556aa);padding:12px;text-align:center}
-.card-head h4{margin:0;font-family:'Montserrat';font-weight:900;font-size:13px;color:var(--accent);letter-spacing:0.2px}
-.card-head .title-line{display:block;margin-top:8px;font-weight:700;font-size:15px;color:var(--text-light)}
-.card-head .label-small{display:block;margin-top:10px;font-size:11px;color:#d6e8fb;font-weight:700}
-.card-head .jumlah{display:block;margin-top:6px;font-size:20px;font-weight:900;color:var(--text-light)}
-.card-head .invest-label{display:block;margin-top:8px;font-size:11px;color:#d6e8fb;font-weight:700}
-.card-head .invest-value{display:block;margin-top:4px;font-weight:800;color:var(--accent);font-size:14px}
+.card-head h4{margin:0;font-family:'Montserrat';font-weight:900;font-size:13px;color:var(--accent);text-align:center}
+.card-head .title-line{display:block;margin-top:8px;font-weight:700;font-size:15px;color:var(--text-light);text-align:center}
+.card-head .label-small{display:block;margin-top:10px;font-size:11px;color:#d6e8fb;font-weight:700;text-align:center}
+.card-head .jumlah{display:block;margin-top:6px;font-size:20px;font-weight:900;color:var(--text-light);text-align:center}
+.card-head .invest-label{display:block;margin-top:8px;font-size:11px;color:#d6e8fb;font-weight:700;text-align:center}
+.card-head .invest-value{display:block;margin-top:4px;font-weight:800;color:var(--accent);font-size:14px;text-align:center}
 
-/* body and table: smaller font for neatness */
+/* body and table: smaller font for neatness; center section titles */
 .body{padding:10px;background:rgba(255,255,255,0.01)}
-.section-title{display:inline-block;background:var(--navy);color:#fff;padding:6px 10px;border-radius:6px;font-weight:700;margin-bottom:8px;font-size:12px}
+.section-title{display:block;background:var(--navy);color:#fff;padding:6px 10px;border-radius:6px;font-weight:700;margin-bottom:8px;font-size:12px;text-align:center}
 .card table{width:100%;border-collapse:collapse;font-size:13px;color:var(--muted)}
 .card td{padding:6px 6px;border-bottom:1px solid rgba(255,255,255,0.03)}
 .card .k{text-align:left}
 .card .v{text-align:right;color:var(--muted)}
 
-/* responsive tweaks */
+/* smaller table font for neatness */
+.card table { font-size:13px; }
+.card td { font-size:13px; }
+
+/* responsive */
 @media(max-width:980px){:root{--card-w:220px}}
 @media(max-width:640px){:root{--card-w:100%}}
 </style>
@@ -122,7 +120,7 @@ nav a.active{background:linear-gradient(90deg,#0b3656,#0b2f52);color:var(--accen
 </section>
 
 <section class="section" aria-labelledby="sectors-title">
-  <h2 id="sectors-title" style="color:var(--text-light);font-family:Montserrat;font-weight:800;margin-bottom:12px">Sektor-Sektor di BPBPK Maluku</h2>
+  <h2 id="sectors-title" style="color:var(--text-light);font-family:Montserrat;font-weight:800;margin-bottom:12px;text-align:center">Sektor-Sektor di BPBPK Maluku</h2>
   <div class="sector-grid">
     <div class="sector-card"><img src="images/icon-air.png" alt=""><h3>Air Minum</h3><p>Penyediaan infrastruktur air minum layak bagi masyarakat Maluku.</p></div>
     <div class="sector-card"><img src="images/icon-sanitasi.png" alt=""><h3>Sanitasi</h3><p>Pembangunan dan pengelolaan sanitasi untuk lingkungan sehat.</p></div>
@@ -139,7 +137,9 @@ nav a.active{background:linear-gradient(90deg,#0b3656,#0b2f52);color:var(--accen
       <p>Ringkasan per sektor. Angka jumlah, nilai investasi, utilisasi (termasuk satuan), dan status keberfungsian.</p>
     </div>
 
-    <div id="cards-reg" class="cards-grid" aria-live="polite"></div>
+    <!-- Reguler: top row 3, bottom row 2 -->
+    <div id="cards-reg-top" class="cards-row" aria-live="polite"></div>
+    <div id="cards-reg-bottom" class="cards-row" aria-live="polite"></div>
 
     <div style="height:22px"></div>
 
@@ -148,10 +148,9 @@ nav a.active{background:linear-gradient(90deg,#0b3656,#0b2f52);color:var(--accen
       <p>Ringkasan program IBM. Angka jumlah, nilai investasi, utilisasi (termasuk satuan) dan status keberfungsian.</p>
     </div>
 
-    <div id="cards-ibm" class="cards-grid" aria-live="polite"></div>
-
-    <div style="height:12px"></div>
-    <div id="cards-ibm-bottom" class="cards-bottom" aria-live="polite"></div>
+    <!-- IBM: top row 3, bottom row 2 -->
+    <div id="cards-ibm-top" class="cards-row" aria-live="polite"></div>
+    <div id="cards-ibm-bottom" class="cards-row" aria-live="polite"></div>
 
   </div>
 </section>
@@ -161,7 +160,7 @@ nav a.active{background:linear-gradient(90deg,#0b3656,#0b2f52);color:var(--accen
 </footer>
 
 <script>
-/* Load helper */
+/* helpers */
 async function loadJSON(path){
   try{ const r = await fetch(path,{cache:'no-store'}); if(!r.ok) return []; return await r.json(); }catch(e){ console.error(e); return []; }
 }
@@ -176,12 +175,10 @@ function formatInvest(v){
   return String(v);
 }
 
-/* Build card with "Infrastruktur" + title on next line */
-function buildCard(prefix, name, jumlah, invest, utilisasiRows, statusRows){
-  const utilHtml = (utilisasiRows && utilisasiRows.length)
-    ? `<div class="body"><div class="section-title">Utilisasi</div><table>${utilisasiRows.map(r=>`<tr><td class="k">${r[0]}</td><td class="v">${r[1] || '-'}</td></tr>`).join('')}</table></div>`
-    : '';
-  const statusHtml = `<div class="body"><div class="section-title">Status Keberfungsian</div><table>${statusRows.map(r=>`<tr><td class="k">${r[0]}</td><td class="v">${r[1] || '-'}</td></tr>`).join('')}</table></div>`;
+/* build one card (prefix "Infrastruktur", name on next line) */
+function buildCard(prefix, name, jumlah, invest, utilRows, statusRows){
+  const utilHtml = (utilRows && utilRows.length) ? `<div class="body"><div class="section-title">Utilisasi</div><table>${utilRows.map(r=>`<tr><td class="k">${r[0]}</td><td class="v">${r[1]||'-'}</td></tr>`).join('')}</table></div>` : '';
+  const statusHtml = `<div class="body"><div class="section-title">Status Keberfungsian</div><table>${statusRows.map(r=>`<tr><td class="k">${r[0]}</td><td class="v">${r[1]||'-'}</td></tr>`).join('')}</table></div>`;
   return `<div class="card" role="article" aria-label="${prefix} ${name}">
     <div class="card-head">
       <h4>${prefix}</h4>
@@ -196,14 +193,13 @@ function buildCard(prefix, name, jumlah, invest, utilisasiRows, statusRows){
   </div>`;
 }
 
-/* Map JSON item to fields, include units */
-function mapItem(item, type){
+/* map item to fields with units */
+function mapItem(item){
   const name = pick(item, ['Sektor','Program','Nama','Nama Program']) || '-';
   const jumlah = String(pick(item, ['Jumlah Unit','Jumlah','Unit']) ?? '-');
   const investRaw = pick(item, ['Nilai Investasi (Miliar)','Nilai Investasi','Investasi']);
   const invest = formatInvest(investRaw);
 
-  // units
   const satuanKap = pick(item, ['Satuan Kapasitas','Satuan']) || '';
   const satuanLuas = pick(item, ['Satuan Luas']) || '';
 
@@ -213,7 +209,6 @@ function mapItem(item, type){
   const idle = pick(item, ['Idle Capacity','Idle','Idle Capacity (L/detik)']);
   const luasPen = pick(item, ['Luas Penanganan']);
   const luasKaw = pick(item, ['Luas Kawasan','Luas Total Kawasan']);
-
   if(kt !== null) util.push(['Kapasitas Terpasang', String(kt) + (satuanKap ? ' ' + satuanKap : '')]);
   if(kp !== null) util.push(['Kapasitas Terpakai', String(kp) + (satuanKap ? ' ' + satuanKap : '')]);
   if(idle !== null) util.push(['Idle Capacity', String(idle) + (satuanKap ? ' ' + satuanKap : '')]);
@@ -224,43 +219,37 @@ function mapItem(item, type){
   const tbf = pick(item, ['Tidak Berfungsi','Tidak Berfungsi Unit','Jumlah Tidak Berfungsi']);
   const status = [['Berfungsi', berf !== null ? String(berf) : '-'], ['Tidak Berfungsi', tbf !== null ? String(tbf) : '-']];
 
-  const prefix = 'Infrastruktur';
-  return { prefix, name, jumlah, invest, util, status };
+  return { prefix: 'Infrastruktur', name, jumlah, invest, util, status };
 }
 
-/* Render list centered; show only available items */
-function renderCards(containerId, dataArray, type, limit=5){
-  const container = document.getElementById(containerId);
-  container.innerHTML = '';
-  const list = Array.isArray(dataArray) ? dataArray.slice(0, limit) : [];
-  if(list.length === 0){
-    container.innerHTML = `<div style="padding:16px;color:var(--muted)">Tidak ada data.</div>`;
-    return;
-  }
-  list.forEach(it => {
-    const f = mapItem(it, type);
-    container.insertAdjacentHTML('beforeend', buildCard(f.prefix, f.name, f.jumlah, f.invest, f.util, f.status));
-  });
-}
-
-/* initial load */
-async function loadAndRender(){
-  const reg = await loadJSON('data/rekap_reguler.json');
-  const ibm = await loadJSON('data/rekap_ibm.json');
-  renderCards('cards-reg', reg, 'reg', 5);
-  renderCards('cards-ibm', ibm, 'ibm', 5);
-
-  // extra IBM two if present
-  const extra = Array.isArray(ibm) && ibm.length > 5 ? ibm.slice(5,7) : [];
-  const bottom = document.getElementById('cards-ibm-bottom');
+/* render rows: top 3, bottom 2 */
+function renderRows(topContainerId, bottomContainerId, dataArray){
+  const top = document.getElementById(topContainerId);
+  const bottom = document.getElementById(bottomContainerId);
+  top.innerHTML = '';
   bottom.innerHTML = '';
-  extra.forEach(it => {
-    const f = mapItem(it, 'ibm');
+  const list = Array.isArray(dataArray) ? dataArray : [];
+  // top 3
+  list.slice(0,3).forEach(it => {
+    const f = mapItem(it);
+    top.insertAdjacentHTML('beforeend', buildCard(f.prefix, f.name, f.jumlah, f.invest, f.util, f.status));
+  });
+  // bottom 2
+  list.slice(3,5).forEach(it => {
+    const f = mapItem(it);
     bottom.insertAdjacentHTML('beforeend', buildCard(f.prefix, f.name, f.jumlah, f.invest, f.util, f.status));
   });
 }
 
-/* nav active highlight based on scroll */
+/* load and render all */
+async function loadAndRender(){
+  const reg = await loadJSON('data/rekap_reguler.json');
+  const ibm = await loadJSON('data/rekap_ibm.json');
+  renderRows('cards-reg-top','cards-reg-bottom', Array.isArray(reg) ? reg : []);
+  renderRows('cards-ibm-top','cards-ibm-bottom', Array.isArray(ibm) ? ibm : []);
+}
+
+/* nav active highlight */
 function setActiveNav(){
   const sections = [{id:'hero', nav:'nav-home'},{id:'dashboard', nav:'nav-dashboard'}];
   const offset = window.scrollY + 80;
@@ -275,7 +264,7 @@ function setActiveNav(){
   if(activeEl) activeEl.classList.add('active');
 }
 
-/* smooth scroll for internal links */
+/* smooth scroll */
 document.querySelectorAll('a[href^="#"]').forEach(a=>{
   a.addEventListener('click', e=>{
     const target = a.getAttribute('href').slice(1);
